tambah endpoint 5-8
