# Report_service/controllers/2getBotExecutiveSummary.ts
@@ -4,16 +4,21 @@ import generateTimestamp from '../utils/generateTimeStamp'
 import validateRequestHash from "../utils/validateRequestHash";
 import checkBotOrganization from "../utils/checkBotOrganization";
 
+
 dotenv.config();
-export const getBotConversationTopicChart = async (req: Request, res: Response) => {
-    console.log("execute method: getBotConversationTopicChart");
+export const getBotExecutiveSummary = async (req: Request, res: Response) => {
+    console.log("execute method: getBotExecutiveSummary");
+    const realBackendURL = process.env.endpoint2 ?? "";
+    console.log(`Real Backend URL: ${realBackendURL}`);
     const timeStamp = generateTimestamp();
-    const realBackendURL = process.env.endpoint3 ?? "";
-    console.log(`Real backend URL: ${realBackendURL}`);
-    // Check if the URL is defined 
+    // Prepare the parameters for hash validation
+    const postBody = req.body;
+    const botId = postBody.data?.bot_id;
+    const sessionId = req.headers['ecwx-session-id'] as string;
+    const hash = req.headers['ecwx-hash'] as string;
 
     // Validate request hash
-    const validationResult = await validateRequestHash(req);
+    const validationResult = await validateRequestHash(req, botId, sessionId, hash);
 
     // Check if validation failed
     if (validationResult === "0") {
@@ -25,7 +30,7 @@ export const getBotConversationTopicChart = async (req: Request, res: Response) 
         return;
     }
 
-    const { botId, userId, organizationId } = validationResult;
+    const { userId, organizationId } = validationResult;
     console.log(`Bot ID received: ${botId}`);
     console.log(`User ID from session data: ${userId}`);
     console.log(`Organization ID from session data: ${organizationId}`);
@@ -39,8 +44,9 @@ export const getBotConversationTopicChart = async (req: Request, res: Response) 
     }
 
     console.log('Hash is valid');
-    console.log(`[${timeStamp}] continuing request to real backend url: [${realBackendURL}]`);
+    console.log(`[${timeStamp}] Continuing request to real backend URL: ${realBackendURL}`);
     try {
+        // Send request to the real backend
         const backendResponse = await fetch(realBackendURL, {
             method: 'POST',
             headers: {
@@ -50,17 +56,21 @@ export const getBotConversationTopicChart = async (req: Request, res: Response) 
             },
             body: JSON.stringify(req.body),
         });
+
+        console.log(`Post body sent to real backend: ${JSON.stringify(req.body)}`);
+
         const responseData = await backendResponse.json();
-        const realbackendResStatus = backendResponse.status;
-        res.status(realbackendResStatus).json(responseData);
-        console.log(`Response real backend: res.status(${realbackendResStatus}).json(${JSON.stringify(responseData)});`,);
-        console.log(`Response sent res.status(${realbackendResStatus}).json(${JSON.stringify(responseData)});`,);
+        const realBackendResStatus = backendResponse.status;
+
+        res.status(realBackendResStatus).json(responseData);
+        console.log(`Response from real backend: res.status(${realBackendResStatus}).json(${JSON.stringify(responseData)});`);
+        console.log("Send Real Backand Status to FE", realBackendResStatus, "Response Data", responseData);
     } catch (e) {
         console.error(`[${timeStamp}] Error forwarding request to backend: ${e}`);
-        res.status(500).json({ error_code: 'internal server error' });
+        res.status(500).json({
+            error_code: "5000002",
+            error_message: "error, internal server error",
+        });
     }
+
 }
-
-
-
-
