# Report_service/controllers/6updateBotInternalKnowledge.ts
@@ -5,19 +5,36 @@ import validateRequestHash from "../utils/validateRequestHash";
 import checkBotOrganization from "../utils/checkBotOrganization";
 dotenv.config();
 
-export const getBotConversationHistoryTable = async (req: Request, res: Response) => {
-    console.log("Executing method: getBotConversationHistoryTable");
+export const updateBotInternalKnowledge = async (req: Request, res: Response) => {
+    console.log("Executing method: updateBotInternalKnowledge");
 
-    const realBackendURL = process.env.endpoint1 ?? '';
+    const realBackendURL = process.env.endpoint6 ?? '';
     const timeStamp = generateTimestamp();
-    // Check if the URL is defined
+
     if (!realBackendURL) {
-        res.status(500).json({ error_code: 'internal server error' });
+        res.status(500).json({
+            error_code: "5000002",
+            error_message: "error, internal server error",
+        });
         console.error(`[${timeStamp}] Response sent: res.status(500).json({ error_code: "internal server error", message: "Backend URL is not defined" });`);
         return;
     }
+
+    const botId = req.body?.bot_id;
+    const sessionId = req.headers['ecwx-session-id'] as string;
+    const hash = req.headers['ecwx-hash'] as string;
+
+    if (!botId) {
+        res.status(400).json({
+            error_message: "invalid request. invalid field value",
+            error_code: "40000004"
+        });
+        console.error(`[${timeStamp}] Bot ID not found in request body`);
+        return;
+    }
+
     // Validate request hash
-    const validationResult = await validateRequestHash(req);
+    const validationResult = await validateRequestHash(req, botId, sessionId, hash);
 
     // Check if validation failed
     if (validationResult === "0") {
@@ -29,7 +46,7 @@ export const getBotConversationHistoryTable = async (req: Request, res: Response
         return;
     }
 
-    const { botId, userId, organizationId } = validationResult;
+    const { userId, organizationId } = validationResult;
     console.log(`Bot ID received: ${botId}`);
     console.log(`User ID from session data: ${userId}`);
     console.log(`Organization ID from session data: ${organizationId}`);
@@ -41,7 +58,6 @@ export const getBotConversationHistoryTable = async (req: Request, res: Response
         console.error(`[${timeStamp}] Response sent: res.status(403).json({ error_code: "forbidden", message: "Bot ID does not match organization ID" });`);
         return;
     }
-
     console.log('Hash is valid');
     console.log(`[${timeStamp}] Continuing request to real backend URL: ${realBackendURL}`);
 
@@ -57,13 +73,19 @@ export const getBotConversationHistoryTable = async (req: Request, res: Response
             body: JSON.stringify(req.body),
         });
 
+        console.log(`Post body sent to real backend: ${JSON.stringify(req.body)}`);
+
         const responseData = await backendResponse.json();
         const realBackendResStatus = backendResponse.status;
 
         res.status(realBackendResStatus).json(responseData);
         console.log(`Response from real backend: res.status(${realBackendResStatus}).json(${JSON.stringify(responseData)});`);
+        console.log("Send Real Backand Status to FE", realBackendResStatus, "Response Data", responseData);
     } catch (e) {
         console.error(`[${timeStamp}] Error forwarding request to backend: ${e}`);
-        res.status(500).json({ error_code: 'internal server error' });
+        res.status(500).json({
+            error_code: "5000002",
+            error_message: "error, internal server error",
+        });
     }
 };
